[package]
name = "rs-docker-images2ql"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.bollard]
version = "0.19.1"
default-features = false
features = [
	"http",
	"pipe",
]

[dependencies.async-graphql]
version = "7.0.17"
default-features = false
features = [
	"graphiql",
	"playground",
]
